| Bug #42921 | primary key update replicated from myisam/innodb to cluster fails | ||
|---|---|---|---|
| Submitted: | 17 Feb 2009 9:33 | Modified: | 14 Mar 2009 16:11 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Replication | Severity: | S3 (Non-critical) |
| Version: | cluster 6.3 | OS: | Any |
| Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[17 Feb 2009 9:33]
Tomas Ulin
[17 Feb 2009 9:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/66600 2850 Tomas Ulin 2009-02-17 Bug #42921 primary key update replicated from myisam/innodb to cluster fails modified: sql/ha_ndbcluster.cc sql/log_event.cc === modified file 'sql/ha_ndbcluster.cc' --- a/sql/ha_ndbcluster.cc 2009-02-17 07:29:19 +0000 +++ b/sql/ha_ndbcluster.cc 2009-02-17 09:33:45 +0000 @@ -3541,10 +3541,6 @@ int ha_ndbcluster::primary_key_cmp(const return 1; } } - /* - potentially not needed call to this function - */ - DBUG_ASSERT(!table->in_use->slave_thread || (m_ignore_no_key == FALSE)); return 0; } === modified file 'sql/log_event.cc' --- a/sql/log_event.cc 2009-02-16 08:34:08 +0000 +++ b/sql/log_event.cc 2009-02-17 09:33:45 +0000 @@ -9109,18 +9109,6 @@ Update_rows_log_event::do_before_row_ope { if (m_table->s->keys > 0) { - /* - primary key columns should not be set in write_set - */ - if (m_table->s->primary_key != MAX_KEY) - { - KEY *key= m_table->key_info + m_table->s->primary_key; - KEY_PART_INFO *key_part= key->key_part; - KEY_PART_INFO *end= key_part + key->key_parts; - for (; key_part != end; key_part++) - bitmap_clear_bit(m_table->write_set, key_part->fieldnr - 1); - } - // Allocate buffer for key searches m_key= (uchar*)my_malloc(m_table->key_info->key_length, MYF(MY_WME)); if (!m_key) -- MySQL Code Commits Mailing List For list archives: http://lists.mysql.com/commits To unsubscribe: http://lists.mysql.com/commits?unsub=commits@bugs.mysql.com
[17 Feb 2009 15:00]
Bugs System
Pushed into 5.1.32-ndb-6.3.23 (revid:tomas.ulin@sun.com-20090217131017-6u8qz1edkjfiobef) (version source revid:tomas.ulin@sun.com-20090217093345-jvyqfhxtkanav1wl) (merge vers: 5.1.32-ndb-6.3.23) (pib:6)
[17 Feb 2009 16:48]
Bugs System
Pushed into 5.1.32-ndb-6.4.3 (revid:tomas.ulin@sun.com-20090217134419-5ha6xg4dpedrbmau) (version source revid:tomas.ulin@sun.com-20090217103534-44bbfu7plh1whrde) (merge vers: 5.1.32-ndb-6.4.3) (pib:6)
[14 Mar 2009 16:11]
Jon Stephens
Documented bugfix in the NDB-6.3.23 and 6.4.3 changelogs as follows:
Primary key updates on MyISAM and InnoDB tables failed to
replicate to NDBCLUSTER tables.
