Bug #42921  primary key update replicated from myisam/innodb to cluster fails