sql/ha_ndbcluster.cc
@@ -3541,10 +3541,6 @@ int ha_ndbcluster::primary_key_cmp(const uchar * old_row, const uchar * new_row)
         return 1;
     }
   }
-  /*
-    potentially not needed call to this function
-  */
-  DBUG_ASSERT(!table->in_use->slave_thread || (m_ignore_no_key == FALSE));
   return 0;
 }
 
